src/test/deca/context/invalid/test_error_3.52-4.deca
// Description:
//    Soulève l'erreur (3.52)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'float' et 'string' ne sont pas compatibles avec l'opérateur binaire '*' (règle 3.52)
//
// Historique:
//      cree le 06/01/2022

{
	int var;
    var = 1.0 * "hello";
}
